fix lack of spacing between image group. closes #85

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -401,6 +401,7 @@ dl dd {
 .grid-flex-container {
   padding: 0;
   list-style: none;
+  display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -416,6 +417,7 @@ dl dd {
     width: 90%;
   }
   [class^="grid-flex-cell"] {
+    -webkit-box-flex: 0;
     -webkit-flex: 0 0 100%;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
@@ -423,6 +425,7 @@ dl dd {
 }
 @media screen and (min-width: 601px) {
   [class^="grid-flex-cell"] {
+    -webkit-box-flex: 1;
     -webkit-flex: 1;
         -ms-flex: 1;
             flex: 1;
@@ -434,6 +437,7 @@ dl dd {
   .grid-flex-cell-1of2,
   .grid-flex-cell-1of3,
   .grid-flex-cell-1of4 {
+    -webkit-box-flex: 0;
     -webkit-flex: none;
         -ms-flex: none;
             flex: none;
@@ -500,7 +504,8 @@ select,
   -webkit-appearance: none;
 }
 .form-input:focus {
-  transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+          transition: all 0.2s ease-in;
   border: 1px solid #74ddff;
   background-color: #f8fdff;
 }
@@ -606,10 +611,14 @@ select:focus:-moz-focusring {
   text-align: center;
   cursor: pointer;
   background-color: #00b0e9;
-  transition-delay: 0;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-in;
-  transition-property: background, border-color;
+  -webkit-transition-delay: 0;
+          transition-delay: 0;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-in;
+          transition-timing-function: ease-in;
+  -webkit-transition-property: background, border-color;
+          transition-property: background, border-color;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -964,6 +973,12 @@ figure figcaption {
   }
 }
 @media screen and (min-width: 481px) {
+  figure img:not(:last-child):not(:only-child) {
+    margin-right: 5px;
+  }
+  figure img:not(:only-child) {
+    margin-top: 5px;
+  }
   figure img + figcaption {
     margin-bottom: 5px;
   }
